# AI-ML-Training-NCIT-6th-Sem-BCA-Students

./: .gitignore
01- Python Basics/: main.py  program1.py  pyproject.toml
01- Python Basics/src/: program2.py
02- Scikit Learn/: main.py  main2.py  main3.ipynb  pyproject.toml
03 - Pandas/: main.ipynb  pyproject.toml
04- Linear Regression/: main.ipynb
05- Multiple and Polynomial Regression/: multiple_linear_regression.ipynb  polynomial_regression.ipynb
06- Decision Tree/: iris_classification.ipynb
07- Titanic Dataset/: classificaiton_survival.ipynb  pyproject.toml
08-Streamlit and FastAPI/: backend.py  main.py  pyproject.toml  titanic.py  titanic_prediction_model.pkl
09- Orange Data Mining/california-housing/: flow.ows  predict.csv
09- Orange Data Mining/mushroom-edibility/: flow.ows  prediction.csv
10 - Clustering /: main.ipynb  pyproject.toml
11. Neural Networks for Regression & Classification/: Classification using Neural Network.ipynb  Neural Network for Linear Regression.ipynb
12. CNN/: .gitignore  README.md  main.py  pyproject.toml
12. CNN/Image Classification using CNN/: train.py
13. Hugging Face/: language-translation.ipynb  main.py  pyproject.toml  sentiment-analysis.ipynb  summarizer.ipynb
14. Langchain/: embeddings.ipynb  llm_api_call_with_image.ipynb  llm_api_calls.ipynb  ollama_llm_call.ipynb  pyproject.toml
15. RAG/: main.py  pyproject.toml  rag.ipynb
embeddings/: program1.py  program2.py  program3.py  pyproject.toml
movie-recommendation-system/: README.md  main.py  pyproject.toml
(+1 files in other folders)
